styling for Episodes page

--- a/src/components/home/Hero/hero.module.scss
+++ b/src/components/home/Hero/hero.module.scss
@@ -1,10 +1,8 @@
-@import "../../styles/breakpoint";
-@import "../../styles/converter";
-@import "../../styles/variables";
+@import "../../../styles/breakpoint";
+@import "../../../styles/converter";
+@import "../../../styles/variables";
 
 .hero {
-  // margin-top: to-rem(53);
-
   @include md() {
     display: flex;
     justify-content: space-between;
