--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,6 @@
 // Theme colors
 $theme-purple: #40327a;
-$light-grey: #f5f5f8;
+$theme-light-purple: #f5f5f8;
 
 // General colors
 $text-dark: #404040;
